--- a/bundle_hadoop/src/assets/scss/blocks/content.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/content.scss
@@ -1742,3 +1742,16 @@ span.dmmono {
   height: 12px;
   background-image: url("/assets/images/card_offwhite_arrow.svg");
 }
+
+.chevron_right-lg {
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 14px;
+  margin-top: 18px;
+
+  margin-left: 12px;
+  width: 13.5px;
+  height: 20px;
+  background-image: url("/assets/images/chevron-right.svg");
+}
