--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -33,22 +33,22 @@
           <li>
             <span class="nav-links_item_parent">
               <a href="#">Online installation</a>
-              <i class="chevron chevron_right"></i>
+              <i class="chevron"></i>
             </span>
             <ul class="is_parent">
-              <li>
+              <li class="nav-links-li">
                 <a href="../adcminstall.html"> ADCM installation </a>
               </li>
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Preparing hosts</a>
-                  <i class="chevron chevron_right"></i>
+                  <i class="chevron"></i>
                 </span>
                 <ul class="is_parent">
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding a hostprovider </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding hosts </a>
                   </li>
                 </ul>
@@ -56,28 +56,28 @@
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">ADH cluster installation</a>
-                  <i class="chevron chevron_right"></i>
+                  <i class="chevron"></i>
                 </span>
                 <ul class="is_parent">
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster creation</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="../addingservices.html"> Adding services </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding hosts to a cluster </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="../addingcomponents.html"> Adding components</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Services configuring </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster configuring </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster installing</a>
                   </li>
                 </ul>
@@ -85,28 +85,28 @@
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Monitoring installation</a>
-                  <i class="chevron chevron_right"></i>
+                  <i class="chevron"></i>
                 </span>
                 <ul class="is_parent">
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster creation</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding services </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding hosts to a cluster </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding components</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Services configuring </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster installing</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Integration with ADH cluster </a>
                   </li>
                 </ul>
@@ -117,22 +117,22 @@
           <li>
             <span class="nav-links_item_parent">
               <a href="../offlineinstallation.html">Offline installation</a>
-              <i class="chevron chevron_right"></i>
+              <i class="chevron"></i>
             </span>
             <ul class="is_parent">
-              <li>
+              <li class="nav-links-li">
                 <a href="#"> ADCM installation </a>
               </li>
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Preparing hosts</a>
-                  <i class="chevron chevron_right"></i>
+                  <i class="chevron"></i>
                 </span>
                 <ul class="is_parent">
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding a hostprovider </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding hosts </a>
                   </li>
                 </ul>
@@ -140,22 +140,22 @@
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Enterprise Tools cluster installation</a>
-                  <i class="chevron chevron_right"></i>
+                  <i class="chevron"></i>
                 </span>
                 <ul class="is_parent">
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster creation</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding services </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding hosts to a cluster </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding components</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster installing</a>
                   </li>
                 </ul>
@@ -163,31 +163,31 @@
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">ADH cluster installation</a>
-                  <i class="chevron chevron_right"></i>
+                  <i class="chevron"></i>
                 </span>
                 <ul class="is_parent">
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster creation</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding services </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding hosts to a cluster </a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Adding components</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Services configuring</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster configuring</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> ET settings importing</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Cluster installing</a>
                   </li>
                 </ul>
@@ -195,13 +195,13 @@
               <li>
                 <span class="nav-links_item_parent">
                   <a href="#">Monitoring installation</a>
-                  <i class="chevron chevron_right"></i>
+                  <i class="chevron"></i>
                 </span>
                 <ul class="is_parent">
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Enterprise Tools cluster configuring</a>
                   </li>
-                  <li>
+                  <li class="nav-links-li">
                     <a href="#"> Integration with ADH cluster </a>
                   </li>
                 </ul>
@@ -228,16 +228,16 @@
           <li>
             <span class="nav-links_item_parent">
               <a href="#">Hardware</a>
-              <i class="chevron chevron_right"></i>
+              <i class="chevron"></i>
             </span>
             <ul class="is_parent">
-              <li>
+              <li class="nav-links-li">
                 <a href="#"> NameNodes </a>
               </li>
-              <li>
+              <li class="nav-links-li">
                 <a href="#"> Datanodes</a>
               </li>
-              <li>
+              <li class="nav-links-li">
                 <a href="#"> YARN and Resource Manager</a>
               </li>
             </ul>
@@ -268,13 +268,13 @@
           <li>
             <span class="nav-links_item_parent">
               <a href="#">HBase</a>
-              <i class="chevron chevron_right"></i>
+              <i class="chevron"></i>
             </span>
             <ul class="is_parent">
-              <li>
+              <li class="nav-links-li">
                 <a href="#"> Architecture </a>
               </li>
-              <li>
+              <li class="nav-links-li">
                 <a href="../datamodel.html"> Data model</a>
               </li>
             </ul>
@@ -299,16 +299,16 @@
           <li>
             <span class="nav-links_item_parent">
               <a href="#">Hadoop Command-line</a>
-              <i class="chevron chevron_right"></i>
+              <i class="chevron"></i>
             </span>
             <ul class="is_parent">
-              <li>
+              <li class="nav-links-li">
                 <a href="../hadoopcliref.html"> Hadoop CLI references</a>
               </li>
-              <li>
+              <li class="nav-links-li">
                 <a href="../daemonlog.html"> Daemonlog</a>
               </li>
-              <li>
+              <li class="nav-links-li">
                 <a href="#"> references:hdfs-cheatsheet.adoc</a>
               </li>
             </ul>
@@ -316,13 +316,13 @@
           <li>
             <span class="nav-links_item_parent">
               <a href="#">MapReduce</a>
-              <i class="chevron chevron_right"></i>
+              <i class="chevron"></i>
             </span>
             <ul class="is_parent">
-              <li>
+              <li class="nav-links-li">
                 <a href="#"> MapReduce User</a>
               </li>
-              <li>
+              <li class="nav-links-li">
                 <a href="#"> MapReduce Admin</a>
               </li>
             </ul>
@@ -330,10 +330,10 @@
           <li>
             <span class="nav-links_item_parent">
               <a href="#">YARN</a>
-              <i class="chevron chevron_right"></i>
+              <i class="chevron"></i>
             </span>
             <ul class="is_parent">
-              <li>
+              <li class="nav-links-li">
                 <a href="#"> references:yarn-cli.adoc</a>
               </li>
             </ul>
@@ -341,47 +341,47 @@
           <li>
             <span class="nav-links_item_parent">
               <a href="#">Configuration parameters</a>
-              <i class="chevron chevron_right"></i>
+              <i class="chevron"></i>
             </span>
             <ul class="is_parent conf-par over-y">
               <div class="new-over">
-                <li>
+                <li class="nav-links-li">
                   <a href="../airflow.html">Airflow </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">Flink </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">HBase </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">HDFS </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">Hive </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">MySQL </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">Solr </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">Spark </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">Spark3 </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">Sqoop </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">YARN </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">Zeppelin </a>
                 </li>
-                <li>
+                <li class="nav-links-li">
                   <a href="#">Zookeeper </a>
                 </li>
               </div>
