--- a/bundle_hadoop/src/assets/scss/blocks/sidebar.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/sidebar.scss
@@ -6,14 +6,7 @@
   // transition: 0.5s ease-in;
 }
 
-.nav-links_item__text {
-  margin-left: 12px;
-}
 
-// .nav-links {
-//   scrollbar-width: thin;
-//   scrollbar-color: #00d2a0;
-// }
 
 /* для Chrome/Edge/Safari */
 .nav-links::-webkit-scrollbar {
@@ -31,104 +24,12 @@
 }
 
 .nav-links {
-  height: 80vh;
+  height: 90vh;
   overflow-y: auto;
 }
 
-.nav-links_item {
-  cursor: pointer;
-  user-select: none;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  //   padding: 12px 0px 12px 12px;
-
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 21px;
-  /* identical to box height */
-
-  /* Off White */
-
-  color: #fcfcfd;
-}
-
-// .nav-links-li {
-//   padding: 12px 0px 12px 40px;
-// }
-
-.is_parent li {
-  padding: 12px 0;
-  z-index: 1;
-}
-
-.nav-links_items>ul {
-  // padding-left: 76px;
-  padding: 0 0 0 36px;
-}
-
-.nav-links_item {
-  padding: 16px 0 16px 0px;
-}
-
-.nav-links_item_link {
-  padding: 16px 0 16px 0px;
-  cursor: pointer;
-  user-select: none;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  //   padding: 12px 0px 12px 12px;
-
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 21px;
-  /* identical to box height */
-
-  /* Off White */
-
-  color: #fcfcfd;
-}
-
-.nav-links_item_link>a {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.nav-links_item_link .nav-links_item__text:hover {
-  color: #00d2a0;
-}
-
-.is_parent {
-  display: none;
-  padding: 12px 0 0 12px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 20px;
-
-  color: #c4c4c4;
-
-  z-index: 1;
-}
-
-.nav-links-li:hover {
-  color: #00d2a0 !important;
-}
-
-.nav-links_items {
-  margin-right: 23px;
-}
-
-.nav-links_item_parent {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  //   padding: 12px 0px 12px 12px;
+.nav-links-li {
+  padding: 14px 0;
 }
 
 .nav-links-li a {
@@ -138,9 +39,10 @@
   line-height: 20px;
   /* identical to box height, or 133% */
 
+
   /* Grey Lighter */
 
-  color: #c4c4c4;
+  color: #C4C4C4;
 }
 
 .nav-links_item_parent a {
@@ -148,91 +50,169 @@
   font-weight: 500;
   font-size: 15px;
   line-height: 20px;
-  color: #c4c4c4;
+  /* identical to box height, or 133% */
+
+
+  /* Grey Lighter */
+
+  color: #C4C4C4;
+}
+
+.nav-links_item {
+  padding: 18px 0;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.nav-links_item_link a {
+  padding: 18px 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.nav-links_item__text {
+  margin-left: 12px;
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  /* identical to box height */
+
+
+  /* Off White */
+
+  color: #FCFCFD;
+}
+
+
+
+.nav-links_item__text.active {
+  color: #00d2a0;
+}
+
+.nav-links_item_parent {
+  padding: 14px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-links_item_parent:hover {
-  color: red;
   cursor: pointer;
+
+  a {
+    color: #1997e8
+  }
+
+  .chevron {
+    background-image: url("/assets/images/card_blue_arrow.svg");
+  }
+
+  .chevron.active {
+    background-image: url("/assets/images/card_greens_arrow.svg");
+  }
 }
 
-// .nav-links_item::before {
-//   content: "\25B6";
-//   color: black;
-//   display: inline-block;
-//   margin-right: 5px;
-// }
-.caret-down::before {
-  transform: rotate(90deg);
+.is_parent li {
+  // height: 44px;
+  // max-height: 44px;
 }
 
 .is_parent li a:hover {
+  color: #1997e8;
+  text-decoration: underline;
+}
+
+// .is_parent li ul.is_parent li ul.is_parent li {
+//   padding: 14px 0;
+// }
+
+.nav-links_item_parent a.active {
   color: #00d2a0;
 }
 
-.is_parent li a {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 20px;
-  color: #c4c4c4;
-}
-
-.active {
-  display: block;
-}
-
-.chevron_right {
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 8px;
-
-
-  padding-right: 10px;
-  width: 8px;
-  height: 12px;
-  background-image: url("/assets/images/chevron-right.svg");
-}
-
-.chevron_right-lg {
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 14px;
-  margin-top: 18px;
-
-  margin-left: 12px;
-  width: 13.5px;
-  height: 20px;
-  background-image: url("/assets/images/chevron-right.svg");
+.nav-links_item_parent a:hover {
+  color: #1997e8;
+  text-decoration: underline;
 }
 
 .nav-links_item:hover {
-  color: #00d2a0;
+
+
+  .nav-links_item__text {
+    color: #00d2a0;
+  }
+
+  cursor: pointer;
 }
 
-.chevron_down {
+.nav-links_item_link:hover {
+  .nav-links_item__text {
+    color: #00d2a0;
+  }
+
+  cursor: pointer;
+}
+
+.is_parent {
+  display: none;
+  padding-left: 36px;
+}
+
+.is_parent li ul.is_parent {
+  padding-left: 12px;
+  // background-color: red;
+}
+
+.is_parent li ul.is_parent {
+  // padding: 6px 0;
+  // background-color: red;
+}
+
+
+.is_parent.active {
+  display: block;
+}
+
+.over-y {
+  // padding: 5px !important;
+  height: 212px;
+  // overflow-y: auto;
+}
+
+
+
+.over-y li:first {
+  padding-top: 0 !important;
+}
+
+.new-over {
+  margin: 12px 8px 12px 12px;
+  // padding-bottom: 12px;
+}
+
+.chevron {
+  margin-right: 20px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 12px;
+  width: 8px;
+  height: 12px;
+  background-image: url("/assets/images/card_offwhite_arrow.svg");
+}
 
+.chevron.active {
+  margin-right: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
   width: 12px;
-  height: 8px;
-  padding-right: 10px;
-  background-image: url("/assets/images/chevron-down.svg");
+  height: 12px;
+  background-image: url("/assets/images/card_greens_arrow.svg");
 }
 
-.chevron_down-lg {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 20px;
-
-  width: 20px;
-  height: 13.5px;
-  margin-left: 12px;
-  background-image: url("/assets/images/chevron-down.svg");
-}
 
 .getstarted {
   background-position: center;
@@ -354,14 +334,6 @@
   height: 24px;
   // margin-right: 12px;
   background-image: url("/assets/images/icons_how_to_offwhite.svg");
-}
-
-.nav-links_item a:hover {
-  color: #00d2a0;
-}
-
-.nav-links_item_link a:hover {
-  color: #00d2a0;
 }
 
 // close-sm sidebar ---------------------------------------------------------------
