--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -221,8 +221,7 @@
       </li>
       <!-- Planning guide -->
       <li class="nav-links_items">
-        <span class="nav-links_item"
-          ><i class="planningguides tooltip-top-left"></i>
+        <span class="nav-links_item"><i class="planningguides tooltip-top-left"></i>
           <span class="nav-links_item__text">Planning guide</span>
         </span>
         <ul class="is_parent">
@@ -256,8 +255,7 @@
       </li>
       <!-- Concepts -->
       <li class="nav-links_items">
-        <span class="nav-links_item"
-          ><i class="concepts tooltip-top-left"></i>
+        <span class="nav-links_item"><i class="concepts tooltip-top-left"></i>
           <span class="nav-links_item__text">Concepts</span>
         </span>
         <ul class="is_parent">
@@ -294,8 +292,7 @@
       </li>
       <!-- References -->
       <li class="nav-links_items">
-        <span class="nav-links_item"
-          ><i class="references tooltip-top-left"></i>
+        <span class="nav-links_item"><i class="references tooltip-top-left"></i>
           <span class="nav-links_item__text">References</span>
         </span>
         <ul class="is_parent">
