--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -1,17 +1,16 @@
 <aside class="sidebar">
-  <!-- <div class="sidebar-head">
+  <div class="sidebar-head">
     <div class="sidebar-head-title">
       <div class="sidebar-head-title__text">Arenadata Hadoop</div>
     </div>
     <div class="sidebar-head-version">
       <div class="sidebar-head-version__text">Select version</div>
-      <select>
-        <option>Current</option>
-        <option>1.0</option>
-        <option>2.0</option>
-      </select>
+      <div class="sidebar-head-version__version">
+        <div class="version-chevron"></div>
+        <span>current</span>
+      </div>
     </div>
-  </div> -->
+  </div>
   <!-- <div class="timer" style="margin-top: 30px"></div> -->
   <div class="sidebar-head-button">
     <hr class="hr-line" />
