--- a/bundle_hadoop/src/assets/scss/blocks/content.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/content.scss
@@ -1755,3 +1755,24 @@ span.dmmono {
   height: 20px;
   background-image: url("/assets/images/chevron-right.svg");
 }
+
+.chevron_down-lg {
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 20px;
+
+  width: 20px;
+  height: 13.5px;
+  margin-left: 12px;
+  background-image: url("/assets/images/chevron-down.svg")
+}
+
+.version-chevron {
+  margin-right: 8px;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 8px;
+  height: 12px;
+  background-image: url("/assets/images/card_blue_arrow.svg");
+}
