--- a/bundle_hadoop/src/assets/scss/blocks/sidebar.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/sidebar.scss
@@ -4,6 +4,7 @@
   margin-left: 40px;
   margin-right: 20px;
   // transition: 0.5s ease-in;
+
 }
 
 /* для Chrome/Edge/Safari */
@@ -603,9 +604,11 @@
 .sidebar-head {
   // padding-left: 40px;
   // height: 90px;
+  // transition: all 1s ease;
 }
 
 .sidebar-head.close-head {
+
   .sidebar-head-title {
     visibility: hidden;
   }
