--- a/bundle_hadoop/src/partials/nav.html
+++ b/bundle_hadoop/src/partials/nav.html
@@ -1,5 +1,5 @@
 <!-- <nav style="margin-top: 200px">123</nav> -->
-<section class="top-nav" style="color: #fff">
+<header class="header-second" style="color: #fff">
   <!-- <nav aria-label="breadcrumb12" style="color: #fff">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -13,7 +13,6 @@
   <div>1</div>
 
   <div class="qwe">2</div> -->
-</section>
-
+</header>
 <!-- <nav123 class="nav123">123123123</nav123> -->
 <!-- <nav>123123123</nav> -->
